--- a/css/style.css
+++ b/css/style.css
@@ -587,7 +587,8 @@ h6 {
 }
 
 .menu-open .header__button_join-us {
-  color: #737373;
+  color: #fff;
+  font-size: 2.5rem;
   background-color: rgba(255, 255, 255, 0.1);
 }
 
@@ -1349,6 +1350,7 @@ h6 {
 }
 
 .item-pricing__title {
+  display: block;
   margin: 0.625rem 0;
 }
 
@@ -1992,7 +1994,12 @@ h6 {
         -ms-flex-direction: column;
             flex-direction: column;
     text-align: center;
-    row-gap: 1.875rem;
+    row-gap: 2.5rem;
+  }
+
+  .menu__link {
+    font-size: 2.5rem;
+    color: #fff;
   }
 
   .icon-menu {
